--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Node Base | node-base</title>
     <meta name="description" content="Project template for Node library.">
-    <link rel="preload stylesheet" href="/node-base/assets/style.fa6d7b66.css" as="style">
+    <link rel="preload stylesheet" href="/node-base/assets/style.8dad51ac.css" as="style">
     <script type="module" src="/node-base/assets/app.6636c941.js"></script>
     <link rel="preload" href="/node-base/assets/inter-roman-latin.2ed14f66.woff2" as="font" type="font/woff2" crossorigin="">
   <link rel="modulepreload" href="/node-base/assets/chunks/framework.b7b818f4.js">
@@ -20,13 +20,13 @@ __VP_SITE_DATA__ = JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"n
     
   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-xxx"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S66MPLRFJZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-xxx');
+  gtag('config', 'G-S66MPLRFJZ');
 </script>
 </body>
 
